--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.7.8",
     "browser-sync": "2.18.13",
-    "gulp": "^3.9.1"
+    "electron": "~1.7.8",
+    "gulp": "^3.9.1",
+    "video.js": "^6.2.8"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "capture-video-frame": "^0.1.2",
     "jquery": "^3.2.1",
+    "popper.js": "^1.11.1",
     "react": "^16.0.0",
     "react-desktop": "^0.3.1",
-    "react-dom": "^16.0.0",
-    "popper.js": "^1.11.1"
+    "react-dom": "^16.0.0"
   }
 }
